tests/parse_errors/wrong_var_name.src
.IPPcode18
DEFVAR GF@5test